--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -1,3 +1,4 @@
 .container_home-page{
 	background-color: #383645;
+	margin: 0;
 }
